# DSF_CNCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all2all_demo.cc  all2one_demo.cc  allgather_demo.cc  allreduce_demo.cc  broadcast_demo.cc  build.sh  check.h  compile_commands.json  one2all_demo.cc  push.sh  reduce_demo.cc  reducescatter_demo.cc  shell.go  test.cc  test.go  test_demo.cc
.cache/clangd/index/: DSF.cc.7818A562C975971D.idx  cnclComm.cc.6E318E016D7BEF04.idx  cnclComm.h.9CBD519B065AD875.idx  dev_MLU.cc.A67D651BD062026B.idx  dev_MLU.h.181F7E0210BDAEC6.idx  initComm.cc.04BAF0F698873078.idx  initComm.h.028FFA86A1C4687F.idx  mluTool.cc.4D816D816F0D9B84.idx  mluTool.h.68F4EBDCA281900F.idx
.clangd/index/: all2all_demo.cc.88F4DF478388FF2E.idx  all2one_demo.cc.BB428AB135F75DF7.idx  allgather_demo.cc.AB88AC6E43E5560E.idx  allreduce_demo.cc.17DC1746C5A26A35.idx  broadcast_demo.cc.65B319FC139C8A6F.idx  check.h.C3A22F1FC7525927.idx  one2all_demo.cc.33B237F8B0C3F099.idx  reduce_demo.cc.13EC27292A6EE899.idx  reducescatter_demo.cc.305E69B1AC0106CF.idx  test.cc.C8EE8914E97B917E.idx
docs/: README.md
src/: CMakeLists.txt  DSF.cc  Makefile  build.sh  cnclComm.cc  cnclComm.h  cncl_group.cc  cncl_group.h  cncl_utils.h  communcation_device.cc  communcation_device.h  dev_MLU.cc  dev_MLU.h  initComm.cc  initComm.h  mluComm.cc  mluTool.cc  mluTool.h  mlu_comm.cc  tool.h
test/: CMakeLists.txt  clique_threads.cc  testDemo.cc  testMLU.cc  test_MLU.cc  test_cnclAllReduce.cc  test_cnclGetCommDevice.cc  test_cnclSend_cnclRecv.cc  test_cnrtMalloc.cc  testcnrtMalloc.cc
